# TrackSpent

./: .gitignore  Sans-titre-2024-04-08-1501.excalidraw
back/: Cargo.toml  checkData.json
back/src/: display.rs  main.rs  sort.rs  spent.rs
front/: .gitignore  pubspec.yaml
front/integration_test/: simple_test.dart
front/lib/: main.dart
front/lib/pages/: authentification.dart  carousel.dart  expense_list.dart  income_pages.dart  new_sort_page.dart  outcome_page.dart  piechart.dart  sort_page.dart  truelayer.dart  update_data.dart
front/linux/flutter/: generated_plugins.cmake
front/macos/Flutter/: GeneratedPluginRegistrant.swift
front/rust/: Cargo.toml
front/rust/src/: frb_generated.rs
front/rust/src/api/: simple.rs
front/rust_builder/: pubspec.yaml
front/rust_builder/android/: build.gradle  settings.gradle
front/rust_builder/ios/: rust_lib_front.podspec
front/rust_builder/linux/: CMakeLists.txt
front/rust_builder/macos/: rust_lib_front.podspec
front/rust_builder/windows/: CMakeLists.txt
front/windows/flutter/: generated_plugins.cmake
full_flutter/: .gitignore  README.md  pubspec.yaml
full_flutter/android/app/: build.gradle
full_flutter/ios/: Podfile
full_flutter/ios/Runner/: Info.plist
full_flutter/ios/Runner.xcodeproj/: project.pbxproj
full_flutter/lib/: main.dart
full_flutter/lib/pages/: carousel.dart  database.dart  expense_list.dart  income_pages.dart  outcome_page.dart  sort_page.dart  (+5 more)
full_flutter/linux/: CMakeLists.txt  my_application.cc
full_flutter/web/: index.html
full_flutter/windows/: CMakeLists.txt
(+16 files in other folders)
