[package]
name = "rust_lib_front"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.4.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
lazy_static = "1.4"
rusqlite = "0.32.0"
bcrypt = "0.15.1"
jsonwebtoken = "9.3"
